--- a/shipping.service
+++ b/shipping.service
@@ -4,7 +4,7 @@ Description=Shipping Service
 [Service]
 User=roboshop
 Environment=CART_ENDPOINT=cart.learntechnology.tech:8080
-Environment=DB_HOST=<MYSQL-SERVER-IPADDRESS>
+Environment=DB_HOST=mysql.learntechnology.tech
 ExecStart=/bin/java -jar /app/shipping.jar
 SyslogIdentifier=shipping
 
