--- a/nginx-proxy.conf
+++ b/nginx-proxy.conf
@@ -4,11 +4,11 @@ location /images/ {
   root   /usr/share/nginx/html;
   try_files $uri /images/placeholder.jpg;
 }
-location /api/catalogue/ { proxy_pass http://172.31.84.171:8080/; }
-location /api/user/ { proxy_pass http://172.31.92.77:8080/; }
-location /api/cart/ { proxy_pass http://172.31.87.30:8080/; }
-location /api/shipping/ { proxy_pass http://172.31.93.80:8080/; }
-location /api/payment/ { proxy_pass http://172.31.89.243:8080/; }
+location /api/catalogue/ { proxy_pass http://catalogue.learntechnology.tech:8080/; }
+location /api/user/ { proxy_pass http://user.learntechnology.tech:8080/; }
+location /api/cart/ { proxy_pass http://cart.learntechnology.tech:8080/; }
+location /api/shipping/ { proxy_pass http://shipping.learntechnology.tech:8080/; }
+location /api/payment/ { proxy_pass http://payment.learntechnology.tech:8080/; }
 
 location /health {
   stub_status on;
