--- a/nginx-autorestart.service.conf
+++ b/nginx-autorestart.service.conf
@@ -3,7 +3,7 @@ Description=Automatically restart Nginx after reboot
 
 [Service]
 Type=oneshot
-#ExecStart=/usr/bin/systemctl start nginx
+ExecStart=/usr/bin/systemctl start nginx
 ExecReload=/usr/bin/systemctl restart nginx
 
 [Install]
